<resources>
	<string name="app_name">Shows-LukaJovanovic</string>
	<string name="hint_username">Username</string>
	<string name="hint_password">Password</string>
	<string name="err_username">Enter valid email address</string>
	<string name="err_password">Enter a password with 8 or more characters</string>
	<string name="button_login">Log in</string>
	<string name="button_save">SAVE</string>
	<string name="hint_episode_description">Episode description</string>
	<string name="hint_episode_title">Episode title</string>
	<string name="text_episodes">
		<b>Episodes</b>
	</string>
	<string name="text_episode">
		<b>Episode</b>
	</string>
	<string name="text_shows">
		<b>Shows</b>
	</string>
	<string name="text_upload_photo">
		<b>Upload photo</b>
	</string>
	<string name="text_save">
		<b>SAVE</b>
	</string>
	<string name="text_seasons">
		<b>Seasons</b>
	</string>
	<string name="gallery">Gallery</string>
	<string name="camera">Camera</string>
	<string name="e_mail">E-mail</string>
	<string name="re_enter_password">Password again</string>
	<string name="register">REGISTER</string>
	<string name="create_an_account">
		<b>Create an account</b>
	</string>
	<string name="remember_me">Remember me</string>
	<string name="title">
		<b>Shows</b>
	</string>

</resources>
