<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
				xmlns:android="http://schemas.android.com/apk/res/android"
				xmlns:app="http://schemas.android.com/apk/res-auto"
				xmlns:tools="http://schemas.android.com/tools"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clickable="true"
				android:focusable="true"
				android:background="@color/colorBackground"
				android:orientation="vertical">

	<androidx.appcompat.widget.Toolbar
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					android:background="@color/colorPrimary"
					android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
					app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
					android:id="@+id/toolbarAddEpisode"/>
	<ScrollView android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:fillViewport="true">
		<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:clickable="true"
						android:focusable="true"
						android:paddingStart="16dp"
						android:paddingEnd="16dp"
						android:background="@color/colorBackground">
			<androidx.constraintlayout.widget.Guideline
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/guidelineLeft"
							android:outlineAmbientShadowColor="@color/colorBackground"
							app:layout_constraintGuide_percent="@dimen/guideline_add_episode_left"
							android:orientation="vertical"/>
			<androidx.constraintlayout.widget.Guideline
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:id="@+id/guidelineRight"
							app:layout_constraintGuide_percent="@dimen/guideline_add_episode_right"
							android:orientation="vertical"/>

			<ImageButton
							android:layout_width="150dp"
							android:layout_height="100dp"
							android:scaleType="centerInside"
							app:srcCompat="@drawable/ic_camera"
							android:layout_marginTop="32dp"
							android:background="@color/colorTransparent"
							app:layout_constraintTop_toTopOf="parent"
							app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
							app:layout_constraintRight_toRightOf="@id/guidelineRight"
							android:id="@+id/imageButtonTakePhoto"/>
			<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
							app:layout_constraintRight_toRightOf="@id/guidelineRight"
							app:layout_constraintTop_toBottomOf="@id/imageButtonTakePhoto"
							android:layout_marginTop="16dp"
							android:text="@string/text_upload_photo"
							android:textColor="@color/colorAccent"
							android:textSize="15sp"
							android:id="@+id/textViewUploadPhoto"/>


			<LinearLayout
							android:orientation="vertical"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
							app:layout_constraintRight_toRightOf="@id/guidelineRight"
							app:layout_constraintTop_toBottomOf="@id/textViewUploadPhoto"
							app:layout_constraintBottom_toTopOf="@id/buttonSave"
							android:layout_marginBottom="16dp"
							android:layout_marginTop="16dp"
							android:id="@+id/linearLayoutInputs">

				<com.google.android.material.textfield.TextInputLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/textInputEpisodeTitle">

					<EditText
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:inputType="text"
									android:textSize="16sp"
									android:hint="@string/hint_episode_title"
									android:id="@+id/editTextEpisodeName"/>
				</com.google.android.material.textfield.TextInputLayout>

				<LinearLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:paddingTop="20dp"
								android:paddingBottom="20dp"
								android:orientation="vertical"
								android:id="@+id/linearLayoutSeasonEpisodePicker">
					<TextView
									android:text="Season &amp; episode"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:textColor="@color/colorTextLight"
									android:textSize="16sp"/>
					<TextView
									android:text="S ??, E ??"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:textColor="@color/colorAccent"
									android:textSize="14sp"
									android:id="@+id/textViewSeasonEpisode"/>
				</LinearLayout>

				<com.google.android.material.textfield.TextInputLayout
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:id="@+id/textInputEpisodeDescription">


					<EditText
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:inputType="text"
									android:textSize="16sp"
									android:hint="@string/hint_episode_description"
									android:id="@+id/editTextEpisodeDescription"/>
				</com.google.android.material.textfield.TextInputLayout>
			</LinearLayout>

			<Button
							android:text="@string/button_save"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
							app:layout_constraintRight_toRightOf="@id/guidelineRight"
							android:layout_marginBottom="32dp"
							style="@style/Button"
							android:id="@+id/buttonSave"/>


		</androidx.constraintlayout.widget.ConstraintLayout>
	</ScrollView>
</LinearLayout>